move to net 4.8

--- a/SharpSphere/App.config
+++ b/SharpSphere/App.config
@@ -2,21 +2,19 @@
 <configuration>
     <startup>
 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
                 <binding name="VimBinding">
-                    <security mode="Transport" />
+                    <security mode="Transport"/>
                 </binding>
-                <binding name="VimBinding1" />
+                <binding name="VimBinding1"/>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="https://localhost/sdk/vimService" binding="basicHttpBinding"
-                bindingConfiguration="VimBinding" contract="vSphere.VimPortType"
-                name="VimPort" />
+            <endpoint address="https://localhost/sdk/vimService" binding="basicHttpBinding" bindingConfiguration="VimBinding" contract="vSphere.VimPortType" name="VimPort"/>
         </client>
     </system.serviceModel>
 </configuration>
